fix(lib): dropdown with hover on narrow screen
- Fixes the issue that `BDropdown` with "hover" trigger changed the
  behavior depending on the screen width; became modal on a narrow
  screen. The previous behavior contradicted the statement on the
  documentation "Dropdowns with "hover" trigger won't change it's
  behavior". See
  https://github.com/buefy/buefy/issues/3961#issuecomment-1876302180
  I decided to keep the statement. However, hover events do not make
  sense on touch devices. So "hover" trigger works like "click" trigger
  on touch devices, and dropdown contents are shown in a modal.

  To detect actual touch devices, the trigger element of `BDropdown` now
  handles touch events: touchstart, touchmove, and touchend. The
  contents of `BDropdown` with "hover" trigger on a touch device pops up
  only when the trigger is tapped; i.e., at touchend immediately
  following touchstart. `BDropdown` bears `.is-touch-enabled` class if
  the trigger is tapped.

  Removes the CSS rules that cancels `.is-hoverable` on a narrow screen.
  The modal style is applied when the screen is narrow and:
    - `.is-hoverable` is disabled
    - or `.is-touch-enabled` is enabled

  "hover" trigger precedes "click" trigger in case both are enabled.

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -42,10 +42,12 @@ $dropdown-disabled-opacity: 0.5 !default;
             display: none;
         }
     }
-    &.is-hoverable {
-        &:hover {
-            .dropdown-menu {
-                display: inherit;
+    @media (hover: hover) {
+        &.is-hoverable {
+            &:hover {
+                .dropdown-menu {
+                    display: inherit;
+                }
             }
         }
     }
@@ -110,7 +112,9 @@ $dropdown-disabled-opacity: 0.5 !default;
         }
     }
     @media screen and (max-width: $dropdown-mobile-breakpoint - 1px) {
-        &.is-mobile-modal {
+        /* prevents modal on hover unless it is on touch devices */
+        &.is-mobile-modal:not(.is-hoverable),
+        &.is-mobile-modal.is-touch-enabled {
             > .dropdown-menu {
                 position: fixed !important;
                 width: calc(100vw - 40px);
@@ -127,19 +131,6 @@ $dropdown-disabled-opacity: 0.5 !default;
                 > .dropdown-content {
                     > .dropdown-item, > .has-link a {
                         padding: 1rem 1.5rem;
-                    }
-                }
-            }
-            /* cancels hoverable */
-            &.is-hoverable {
-                &:hover {
-                    .dropdown-menu {
-                        display: none;
-                    }
-                }
-                &.is-active {
-                    .dropdown-menu {
-                        display: block;
                     }
                 }
             }
